<resources>
    <string name="app_name">BT RC Car</string>
    <string name="title_connect">Connect</string>
    <string name="title_control">Control</string>
    <string name="bluetooth_on">BlueTooth ON</string>
    <string name="bluetooth_off">BlueTooth OFF</string>
    <string name="show_pair_dev">Show Paired Devices</string>
    <string name="Search_new_dev">Search New Devices</string>
    <string name="bt_status">BT Status</string>
    <string name="bt_init_status">Unkown</string>
    <string name="devices">Devices</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="stop">Stop</string>
    <string name="disconnect">Disconnect</string>
</resources>