<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connect.ConnectFragment">

    <LinearLayout
        android:id="@+id/connect_funcs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_bton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_on" />

        <Button
            android:id="@+id/btn_btoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_off" />

        <Button
            android:id="@+id/btn_show_pired_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_pair_dev" />

        <Button
            android:id="@+id/btn_search_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Search_new_dev" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_status" />

            <TextView
                android:id="@+id/bt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_init_status" />

        </LinearLayout>

        <ListView
            android:id="@+id/device_list"
            android:layout_width="match_parent"
            android:layout_height="434dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>